Add $599 Cookie Accessibility checkbox option

--- a/index.html
+++ b/index.html
@@ -311,6 +311,10 @@
                             <label>Additional Selections:</label>
                             <div class="checkbox-group">
                                 <label>
+                                    <input type="checkbox" name="addons" value="599" 
+                                        $599 Cookie Accessibility
+                                </label>
+                                <label>
                                     <input type="checkbox" name="addons" value="195">
                                     $195 Logo
                                 </label>
