Correct family discount option and format HTML
Fix HTML syntax for family discount option and add newline at end of file.

--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
                                 <option value="7999">Ultimate premium plan $7,999</option>
                                 <option value="discounted">Discounted</option>
                                 <option value="specialOffer">Special Offer</option>
+                                <option value="familydiscount"> Family Discount</option>option>
                             </select>
                         </div>
                         <div id="custom-price-container" class="custom-price-container">
